--- a/files/icomoon.css
+++ b/files/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?u52qh8');
-  src:  url('fonts/icomoon.eot?u52qh8#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?u52qh8') format('truetype'),
-    url('fonts/icomoon.woff?u52qh8') format('woff'),
-    url('fonts/icomoon.svg?u52qh8#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?yu7f3c');
+  src:  url('fonts/icomoon.eot?yu7f3c#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?yu7f3c') format('truetype'),
+    url('fonts/icomoon.woff?yu7f3c') format('woff'),
+    url('fonts/icomoon.svg?yu7f3c#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,8 +25,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-warning:before {
+  content: "\e929";
+}
+.icon-padlock:before {
+  content: "\e921";
+}
+.icon-unlock:before {
+  content: "\e928";
+}
+.icon-star:before {
+  content: "\e920";
+}
 .icon-star2:before {
   content: "\e927";
+}
+.icon-favorites:before {
+  content: "\e920";
 }
 .icon-arrow_circle:before {
   content: "\e900";
@@ -123,12 +138,6 @@
 }
 .icon-snow:before {
   content: "\e91f";
-}
-.icon-star:before {
-  content: "\e920";
-}
-.icon-favorites:before {
-  content: "\e920";
 }
 .icon-grid-sm:before {
   content: "\e922";
