--- a/files/main.css
+++ b/files/main.css
@@ -1512,7 +1512,7 @@ footer {overflow: hidden;position: relative;margin-top: 2rem;}
 .toolbar {margin-bottom: 2rem;}
 .toolbar label {margin-right: .5rem;}
 .toolbar .selectBox select {padding: 0 1rem 0 .5rem;height: 30px;width: auto;max-width: 15rem;border: 0;}
-.toolbar .selectBox:after {line-height: 2.5rem;right: 0;}
+.toolbar .selectBox:after {line-height: 30px;right: 0;}
 .toolbar [class*="-by"] {margin-right: 4rem;}
 .toolbar [class*="-by"]:last-child {margin-right: 0;}
 .toolbar-bottom {margin-top: 1.5rem;}
@@ -2083,14 +2083,23 @@ footer {overflow: hidden;position: relative;margin-top: 2rem;}
 /**************************************/
 /*** Выпадающее меню ***/
 /**************************************/
-.menu__dropdown {position: fixed;top: 0;left: 0;transform: translateX(-100%);transition: all 0.3s ease;z-index: 12;background: #ffffff;height: 100vh;padding-bottom: 4rem;}
+.menu__dropdown {width: 100%;position: fixed;top: 0;left: 0;transform: translateX(-100%);transition: all 0.3s ease;z-index: 12;background: #ffffff;height: 100vh;padding-bottom: 4rem;}
 .menu__dropdown.opened {transform: translateX(0);}
-.menu__dropdown .mainnav__list-link {text-align: left;padding: 0 .5rem;}
+.menu__dropdown ::-webkit-scrollbar {width: .25rem;height: 0;}
 .menu__label {padding: .75rem 1.25rem;font-size: 30px;background-color: #FFA5D8;color: #ffffff;font-weight: bold;font-family: 'Cormorant Infant', serif;width: 100%;position: relative;}
 .menu__label-close {font-size: 1rem;color: #ffffff;position: absolute;right: 24px;top: 22px;cursor: pointer;}
 .menu__label-close:hover {color:#FFA5D8;}
-.menu__dropdown ul {max-height: calc(100vh - 4rem - 3.5rem);overflow-y: auto;}
-
+.menu__dropdown .catalog__link {margin: 20px;font-size: 1rem;line-height: 20px;}
+.menu__dropdown .catalog__item .sub {display: none;padding-left: 1rem;}
+.menu__dropdown .catalog__item.opened > .sub {display: block;}
+.menu__dropdown .catalog__item .open {color: #CBC3DB;line-height: 1;font-size: .75rem;width: 1.25rem;text-align: center;}
+.menu__dropdown .catalog__item .open:before {content: '\e901';font-family: 'icomoon';line-height: 1;}
+.menu__dropdown .catalog__item .open.opened:before {content: '\e904';}
+.menu__dropdown .catalog__name {width: calc(100% - 1.25rem);line-height: 1.5rem;}
+.menu__dropdown .catalog__content {height: calc(100vh - 188px - 82px - 64px);overflow-y: auto;}
+.menu__content {max-height: 188px;overflow-y: auto;margin-top: 20px;}
+.menu__content li {width: 50%;}
+.menu__content li a {margin: 10px 20px;display: block;}
 
 /**************************************/
 /*** Наверх ***/
