[fix] change theme name "PARTY"

--- a/files/main.css
+++ b/files/main.css
@@ -814,7 +814,7 @@ h6 {font-size: 0.875rem;}
 	#slideshow .owl-dots {bottom: -2rem;width: 100%;text-align: center;}
 	.slider__image {display: none;}
 	.slider__item {height: 400px;background-position: 0% 10%;background-repeat: no-repeat;background-size: cover;align-items: flex-end;justify-content: center;}
-	.slider__content {padding: 4rem 2rem 2rem 2rem;width: 100%;text-align: center;background-image: url('{ASSETS_IMAGES_PATH}slide_bg.png?design=HOLIDAY');background-position: top;background-repeat: no-repeat;background-size: cover;}
+	.slider__content {padding: 4rem 2rem 2rem 2rem;width: 100%;text-align: center;background-image: url('{ASSETS_IMAGES_PATH}slide_bg.png?design=PARTY');background-position: top;background-repeat: no-repeat;background-size: cover;}
 	.slider__title {font-size: 2rem;}
 	.slider__subtitle {font-size: 1rem;margin-top: 0;}
 	.slider__buttons {margin-top: 1rem;}
@@ -950,7 +950,7 @@ h6 {font-size: 0.875rem;}
 .callback__content {padding: 4rem 1.25rem 1.25rem 1.25rem;border-radius: 0 0 1.5rem 1.5rem;background-repeat: no-repeat;background-size: cover;width: 100%;position: relative;}
 .callback__item:last-child {justify-content: flex-start;}
 .callback__item:last-child .callback__content {border-top: 0;padding: 1.25rem 1.25rem 4rem 1.25rem;border-radius: 1.5rem 1.5rem 0 0;}
-.callback__item:last-child .callback__content:before {content: '';background-image: url('{ASSETS_IMAGES_PATH}callback_bg.png?design=HOLIDAY');width: 100%;height: 100%;display: block;position: absolute;left: 0;top: 0;transform: rotate(180deg);z-index: 1;background-size: cover;border-radius: 1.5rem;}
+.callback__item:last-child .callback__content:before {content: '';background-image: url('{ASSETS_IMAGES_PATH}callback_bg.png?design=PARTY');width: 100%;height: 100%;display: block;position: absolute;left: 0;top: 0;transform: rotate(180deg);z-index: 1;background-size: cover;border-radius: 1.5rem;}
 .callback__item:last-child .callback__icon {bottom: auto;top: 5.5rem}
 .callback__item-callback {padding: 1.25rem;height: 460px;background-position: 10% 20%;}
 .callback__item-callback .pretitle {margin: .5rem auto 0;}
@@ -2119,15 +2119,15 @@ footer {overflow: hidden;position: relative;margin-top: 2rem;}
 #main {margin: 0;}
 .overlay-top {overflow: hidden;position: relative;}
 .overlay-bottom {overflow: hidden;position: relative;}
-.overlay-preheader {background-image: url('{ASSETS_IMAGES_PATH}bg_2.png?design=HOLIDAY'), url('{ASSETS_IMAGES_PATH}bg.jpg?design=HOLIDAY');}
+.overlay-preheader {background-image: url('{ASSETS_IMAGES_PATH}bg_2.png?design=PARTY'), url('{ASSETS_IMAGES_PATH}bg.jpg?design=PARTY');}
 .overlay-preheader {top: 0;left: 0;width: 100%;height: 316px;background-position: top;background-size: cover;z-index: 0;position: absolute;}
 .index .overlay-header {bottom: -130%;left: -6%;width: 112%;height: 178%;border-radius: 100% 100% 0 0;background: #F8F1F5;position: absolute;}
 .index .overlay-preheader {height: 1000px;background-position: center;z-index: -1;}
 .page-goods .overlay-preheader {height: 260px;}
-.overlay-prefooter {background-image: url('{ASSETS_IMAGES_PATH}bg.jpg?design=HOLIDAY');}
+.overlay-prefooter {background-image: url('{ASSETS_IMAGES_PATH}bg.jpg?design=PARTY');}
 .overlay-prefooter {bottom: 0;left: 0;width: 100%;height: 950px;background-position: center;background-size: cover;z-index: -1;position: absolute;}
 .overlay-footer {top: -112%;left: -8%;width: 115%;height: 175%;border-radius: 0 0 100% 100%;background: #F8F1F5;position: absolute;}
-.overlay-center {background-image: url('{ASSETS_IMAGES_PATH}bg_3.png?design=HOLIDAY');}
+.overlay-center {background-image: url('{ASSETS_IMAGES_PATH}bg_3.png?design=PARTY');}
 .overlay-center {bottom: -70%;left: 0;width: 100%;height: 936px;background-position: center;background-size: cover;z-index: -1;position: absolute;}
 @media (max-width: 1600px) {
 	.overlay-footer {left: -20%;width: 140%;}
